# dj-twenty-six.github.io

./: .firebaserc  .gitignore  8trider.html  8trider.html:Zone.Identifier  ChangeLog.md  Dockerfile  README.md  blog-pull-cronjob  compose.yml  elements.html  fly.toml  httpd.conf  index.html  manual-proxy-compose.yml  pull.sh  pyproject.toml
.github/workflows/: .main.yml.swp  main.yml
assets/css/: main.css
assets/webfonts/: fa-regular-400.ttf:Zone.Identifier
docker_file/lb_nginx/: Dockerfile  default.conf
dockerfiles/lb_nginx/: Dockerfile  default.conf
