[project]
name = "dj-twenty-six.github.io"
version = "0.1.0"
description = ""
authors = [
    {name = "qkrtnqls1216", email = "qkrtnqls991216@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
